// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/addContentMenuItem return a checkbox menu item 1`] = `
<div>
  <div
    aria-label="checkbox"
    class="MenuOption TextOption menu-option"
    role="button"
  >
    <div
      class="d-flex"
    >
      <div
        class="menu-option__icon"
      >
        <svg
          class="CheckIcon Icon"
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="20,60 40,80 80,40"
          />
        </svg>
      </div>
    </div>
    <div
      class="menu-option__content"
    >
      <div
        class="menu-name"
      >
        checkbox
      </div>
    </div>
    <div
      class="noicon"
    />
  </div>
</div>
`;

exports[`components/addContentMenuItem return a divider menu item 1`] = `
<div>
  <div
    aria-label="divider"
    class="MenuOption TextOption menu-option"
    role="button"
  >
    <div
      class="d-flex"
    >
      <div
        class="menu-option__icon"
      >
        <svg
          class="DividerIcon Icon"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M 432,224 H 16 c -8.836556,0 -16,7.16344 -16,16 v 32 c 0,8.83656 7.163444,16 16,16 h 416 c 8.83656,0 16,-7.16344 16,-16 v -32 c 0,-8.83656 -7.16344,-16 -16,-16 z"
          />
        </svg>
      </div>
    </div>
    <div
      class="menu-option__content"
    >
      <div
        class="menu-name"
      >
        divider
      </div>
    </div>
    <div
      class="noicon"
    />
  </div>
</div>
`;

exports[`components/addContentMenuItem return a text menu item 1`] = `
<div>
  <div
    aria-label="text"
    class="MenuOption TextOption menu-option"
    role="button"
  >
    <div
      class="d-flex"
    >
      <div
        class="menu-option__icon"
      >
        <svg
          class="TextIcon Icon"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M432 416H16a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-128H16a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-128H16a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-128H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
          />
        </svg>
      </div>
    </div>
    <div
      class="menu-option__content"
    >
      <div
        class="menu-name"
      >
        text
      </div>
    </div>
    <div
      class="noicon"
    />
  </div>
</div>
`;

exports[`components/addContentMenuItem return an error and empty element from unknown type 1`] = `<div />`;

exports[`components/addContentMenuItem return an image menu item 1`] = `
<div>
  <div
    aria-label="image"
    class="MenuOption TextOption menu-option"
    role="button"
  >
    <div
      class="d-flex"
    >
      <div
        class="menu-option__icon"
      >
        <svg
          class="ImageIcon Icon"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm-6 336H54a6 6 0 0 1-6-6V118a6 6 0 0 1 6-6h404a6 6 0 0 1 6 6v276a6 6 0 0 1-6 6zM128 152c-22.091 0-40 17.909-40 40s17.909 40 40 40 40-17.909 40-40-17.909-40-40-40zM96 352h320v-80l-87.515-87.515c-4.686-4.686-12.284-4.686-16.971 0L192 304l-39.515-39.515c-4.686-4.686-12.284-4.686-16.971 0L96 304v48z"
          />
        </svg>
      </div>
    </div>
    <div
      class="menu-option__content"
    >
      <div
        class="menu-name"
      >
        image
      </div>
    </div>
    <div
      class="noicon"
    />
  </div>
</div>
`;
